small mistakes corrected

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 								<li>MySQL</li>
 							</ul>
 						</p>
-						<span class="school">New York University</span>
+						<span class="school"></span>
 					</div><!--Self-taught-->
 					
 					<div class="resume-item mb-4">
@@ -580,7 +580,7 @@
 							<textarea class="form-control px-3 py-4"cols="30" rows="10" name="from_message" placeholder="Write a Message"></textarea>
 						</div>
 						<div class="form-group">
-							<button type="submit" class="btn btn-primary  px-4 py-3">Send Message</button>
+							<button type="submit" class="btn btn-primary  px-3 py-2">Send Message</button>
 						</div>
 					</form>
 				</div><!--form contact-->
