added new project

--- a/index.html
+++ b/index.html
@@ -89,6 +89,18 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
+								<a href="https://reconhecimento-facial.onrender.com"><img class="image img-fluid" src="images/face-recognition-page.png" alt=""></a>
+							</div>
+						</div>
+						<div class="p-inner">
+							<h4>Face Recognition Project</h4>
+							<div class="cat">Project created in the Zero to Mastery course at Udemy</div>
+						</div>                                         
+					</div>
+					<div class="single-portfolio col-sm-4 all web">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
 								<a href="https://maurocanunes.github.io/how-it-started/"><img class="image img-fluid" src="images/page_1.jpg" alt=""></a>
 							</div>
 							<!-- <a href="images/p1.jpg" class="img-pop-up">  
@@ -101,7 +113,9 @@
 							<h4>My First Website</h4>
 							<div class="cat">First basic responsive website with landing page</div>
 						</div>                                         
-					</div><!--Web-->
+					</div>
+					
+					<!--Web-->
 					<!-- <div class="single-portfolio col-sm-4 all mobile">
 						<div class="relative">
 							<div class="thumb">
