updated list of learned thing in course

--- a/index.html
+++ b/index.html
@@ -103,105 +103,12 @@
 								<div class="overlay overlay-bg"></div>
 								<a href="https://maurocanunes.github.io/how-it-started/"><img class="image img-fluid" src="images/page_1.jpg" alt=""></a>
 							</div>
-							<!-- <a href="images/p1.jpg" class="img-pop-up">  
-								<div class="middle">
-									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
-								</div>
-							</a>                                   -->
 						</div>
 						<div class="p-inner">
 							<h4>My First Website</h4>
 							<div class="cat">First basic responsive website with landing page</div>
 						</div>                                         
 					</div>
-					
-					<!--Web-->
-					<!-- <div class="single-portfolio col-sm-4 all mobile">
-						<div class="relative">
-							<div class="thumb">
-								<div class="overlay overlay-bg"></div>
-								<a href="#section-portfolio"><img class="image img-fluid" src="images/under_const.png" alt=""></a>
-							</div>
-							<a href="images/p2.jpg" class="img-pop-up">  
-								<div class="middle">
-									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
-								</div>
-							</a>                                  
-						</div>
-						<div class="p-inner">
-							<h4>Mobile App</h4>
-							<div class="cat">Mobile app under development</div>
-						</div>                                         
-					</div>                             -->
-					<!-- <div class="single-portfolio col-sm-4 all packaging">
-						<div class="relative">
-							<div class="thumb">
-								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p3.jpg" alt="">
-							</div>
-							<a href="images/p3.jpg" class="img-pop-up">  
-								<div class="middle">
-									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
-								</div>
-							</a> 
-
-						</div>
-						<div class="p-inner">
-							<h4>Creative Package Design</h4>
-							<div class="cat">Packaging</div>
-						</div>
-					</div> -->
-					<!-- <div class="single-portfolio col-sm-4 all packaging">
-						<div class="relative">
-							<div class="thumb">
-								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p4.jpg" alt="">
-							</div>
-							<a href="images/p4.jpg" class="img-pop-up">  
-								<div class="middle">
-									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
-								</div>
-							</a>                                
-						</div> 
-						<div class="p-inner">
-							<h4>Packaging Brand</h4>
-							<div class="cat">Packaging</div>
-						</div>
-					</div> -->
-					<!-- <div class="single-portfolio col-sm-4 all typography">
-						<div class="relative">
-							<div class="thumb">
-								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p5.jpg" alt="">
-							</div>
-							<a href="images/p5.jpg" class="img-pop-up">  
-								<div class="middle">
-									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
-								</div>
-							</a>                                
-						</div>
-						<div class="p-inner">
-							<h4>Isometric 3D Extrusion</h4>
-							<div class="cat">Typography</div>
-						</div>
-					</div> -->
-					<!-- <div class="single-portfolio col-sm-4 all photography">
-						<div class="relative">
-							<div class="thumb">
-								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p6.jpg" alt="">
-							</div>
-							<a href="images/p6.jpg" class="img-pop-up">  
-								<div class="middle">
-									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
-								</div>
-							</a>                                
-						</div>
-						<div class="p-inner">
-							<h4>White Space Photography</h4>
-							<div class="cat">photography</div>
-						</div>
-					</div> -->
 				</div>
 			</div>
 		</div>
@@ -246,6 +153,24 @@
 								<li>Flexbox</li>
 								<li>CSS Grid</li>
 								<li>Bootstrap 5</li>
+								<li>DOM Manipulation</li>
+								<li>Javascript (including ES6/ES7/ES8/ES9/ES10/ES2020/ES2021/ES2022)</li>
+								<li>Asynchronous JavaScript</li>
+								<li>HTTP/JSON/AJAX</li>
+								<li>React + Redux + React Hooks</li>
+								<li>Git + Github</li>
+								<li>Command Line</li>
+								<li>Node.js</li>
+								<li>Express.js</li>
+								<li>NPM</li>
+								<li>RESTful API Design</li>
+								<li>PostgresSQL</li>
+								<li>SQL</li>
+								<li>Authentication</li>
+								<li>Authorization</li>
+								<li>Scalable Infrastructure</li>
+								<li>Security</li>
+								<li>Production and Deployment</li>
 							</ul>
 							
 							<!-- DOM Manipulation
