added starwars, removed images

--- a/index.html
+++ b/index.html
@@ -101,6 +101,18 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
+								<a href="maurocanunes.github.io/starwars/"><img class="image img-fluid" src="images/starwars.png" alt=""></a>
+							</div>
+						</div>
+						<div class="p-inner">
+							<h4>Starwars Fun</h4>
+							<div class="cat">All the information you need about everything in the Starwars movies</div>
+						</div>                                         
+					</div>
+					<div class="single-portfolio col-sm-4 all web">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
 								<a href="https://maurocanunes.github.io/how-it-started/"><img class="image img-fluid" src="images/page_1.jpg" alt=""></a>
 							</div>
 						</div>
