--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<a href="maurocanunes.github.io/starwars/"><img class="image img-fluid" src="images/starwars.png" alt=""></a>
+								<a href="https://maurocanunes.github.io/starwars/"><img class="image img-fluid" src="images/starwars.png" alt=""></a>
 							</div>
 						</div>
 						<div class="p-inner">
